# snakemake-interface-scheduler-plugins

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release-please.yml  test.yml
src/snakemake_interface_scheduler_plugins/: base.py  tests.py
src/snakemake_interface_scheduler_plugins/interfaces/: dag.py  jobs.py
src/snakemake_interface_scheduler_plugins/registry/: __init__.py  plugin.py
tests/: tests.py
